# ds_asgnmt

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  output.md  pyproject.toml  requirements.txt
app/: check_version.py  community_similarities.py  exploratory_data.py  single_outcome.py  two_cmnty_sml_jaccard.py  two_cmnty_smlrty_nmi.py
output/: Method_1_interesting_findings.csv  Method_2_interesting_findings.csv  Method_3_interesting_findings.csv  Method_4_interesting_findings.csv  Method_5_interesting_findings.csv  community_detection_nmi_similarity_matrix.csv  community_summary.csv  nmi_similarity_matrix.csv
src/: community_analysis.py  publish_output_to_md.py
src/utils/: constants.py
test/: test_basic.py  test_community_analysis.py
utils/: constants.py
