[tool.poetry]
name = "ds_asgnmt"
version = "0.0.1"
description = "Analyse 5 community methods and produce the outcome"
author = ["Muralidharan Sembu"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.3"
pandas = "2.2.3"
matplotlib = "3.10.1"
seaborn = "0.13.2"
scikit-learn = "1.6.1"
numpy = "2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "double"
